# anyapi

./: .gitignore  README.md  pyproject.toml  setup.py
anyapi/: __init__.py
src/anyapi/: __init__.py
