[project]
name = "anyapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex", email = "misterksn@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "tenacity>=9.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
